# wrap-function-emscripten-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make.sh  wrap_b.cpp  wrap_b.hpp
src/: foo.c  main.c
src/cpp/: foo.cpp  main.cpp
